--- a/templates/ict.html
+++ b/templates/ict.html
@@ -14,7 +14,85 @@
     </div>
 </div>
 
+{% for blog in blogs %}
+<div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container about px-lg-0">
+        <div class="row g-0 mx-lg-0">
 
+            {% get_current_language as current_language %}
 
+            {% if forloop.counter|divisibleby:2 %}
+                {% if current_language == 'ar' %}
+                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="p-lg-5 pe-lg-0">
+                            <div class="text-start">
+                                <h1 class="display-5 mb-4">{{blog.title_ar}}</h1>
+                            </div>
+                            <p>
+                                {{blog.content_ar}}
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                        <div class="position-relative h-100">
+                            <img class="position-absolute img-fluid w-100 h-100" src="{{blog.image.url}}" style="object-fit: cover;" alt="">
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="p-lg-5 pe-lg-0">
+                            <div class="text-start">
+                                <h1 class="display-5 mb-4">{{blog.title_en}}</h1>
+                            </div>
+                            <p>
+                                {{blog.content_en}}
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                        <div class="position-relative h-100">
+                            <img class="position-absolute img-fluid w-100 h-100" src="{{blog.image.url}}" style="object-fit: cover;" alt="">
+                        </div>
+                    </div>
+                {% endif %}
+            {% else %}
+                {% if current_language == 'ar' %}
+                    <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                        <div class="position-relative h-100">
+                            <img class="position-absolute img-fluid w-100 h-100" src="{{blog.image.url}}" style="object-fit: cover;" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="p-lg-5 pe-lg-0">
+                            <div class="text-start">
+                                <h1 class="display-5 mb-4">{{blog.title_ar}}</h1>
+                            </div>
+                            <p>
+                                {{blog.content_ar}}
+                            </p>
+                        </div>
+                    </div>
+                {% else %}
+                <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute img-fluid w-100 h-100" src="{{blog.image.url}}" style="object-fit: cover;" alt="">
+                    </div>
+                </div>
+                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="p-lg-5 pe-lg-0">
+                            <div class="text-start">
+                                <h1 class="display-5 mb-4">{{blog.title_en}}</h1>
+                            </div>
+                            <p>
+                                {{blog.content_en}}
+                            </p>
+                        </div>
+                    </div>
 
+                {% endif %}
+            {% endif %}
+        </div>
+    </div>
+</div> <br>
+{% endfor %}
 {% endblock %}
