--- a/templates/index.html
+++ b/templates/index.html
@@ -131,9 +131,9 @@
                     <a href="{% url '_hse' %}" class="btn btn-primary py-3 px-5">{% trans "Read More"%}</a>
                 </div>
             </div>
-            <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
+            <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/QHSE.jpg' %}" style="object-fit: cover;" alt="">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/QHSE.jpg' %}" alt="">
                 </div>
             </div>
         </div>
