--- a/templates/about.html
+++ b/templates/about.html
@@ -91,7 +91,7 @@
         <div class="row g-0 mx-lg-0">
             <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/prespectives.jpg' %}" style="object-fit: cover;" alt="">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/prespectives.jpg' %}" alt="">
                 </div>
             </div>
             <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
@@ -148,7 +148,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+            <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/values.jpg' %}" alt="">
                 </div>
