--- a/project/static/css/progress_bar.css
+++ b/project/static/css/progress_bar.css
@@ -1,12 +1,21 @@
-#progress-bar {
-    width: 100%;
-    background: #f3f3f3;
+/* static/css/progress_bar.css */
+.progress-bar {
+    width: 100%; /* Adjust width based on your needs */
+    background-color: #f3f3f3;
     border: 1px solid #ccc;
-    margin-top: 10px;
-}
-
-#progress-bar-fill {
-    height: 20px;
+    /* Remove fixed positioning and top/left styles */
+    /* position: fixed; */
+    /* top: 0; */
+    /* left: 0; */
+    height: 5px;
+    z-index: 10000;
+    margin-top: 5px; /* Add margin for spacing */
+  }
+  
+  .progress {
+    height: 100%;
+    background-color: #4caf50;
     width: 0;
-    background: #4caf50;
-}
+    transition: width 0.1s;
+  }
+  
