--- a/templates/HSE.html
+++ b/templates/HSE.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <title>{% block title %}QHSE{% endblock %}</title>
+<script src="{% static 'js/filter.js' %}"></script>
 
 <!-- Page Header Start -->
 <div class="container-fluid page-header-hse py-5 mb-5">
