--- a/templates/petro.html
+++ b/templates/petro.html
@@ -17,15 +17,16 @@
     </div>
 </div>
 
-<div class="row mt-n2">
-    <div class="col-12 text-center">
-        <ul class="list-inline mb-5" id="portfolio-flters">
-            <li class="mx-2"><a href="{% url '_operation' %}">{% trans "Drilling Activities" %}</a></li>
-            <li class="mx-2"><a href="{% url '_operation2' %}">{% trans "Petroleum Engineering Activities" %}</a></li>
-        </ul>
-    </div>
-</div>
-
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row mt-n2">
+            <div class="col-12 text-center">
+                <ul class="list-inline mb-5" id="portfolio-flters">
+                    <li class="mx-2"><a href="{% url '_operation' %}">{% trans "Drilling Activities" %}</a></li>
+                    <li class="mx-2 active"><a href="{% url '_operation2' %}">{% trans "Petroleum Engineering Activities" %}</a></li>
+                </ul>
+            </div>
+        </div>
 {% if petro %}
 {% for obj in petro %}
 <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0 data second">
@@ -106,6 +107,8 @@
 </div>
 {% endfor %}
 {% else %}
+</div>
+</div>
 <div class="container">
     <h3>{% trans "No Data Available" %}</h3>
 </div>
