--- a/templates/petro.html
+++ b/templates/petro.html
@@ -9,7 +9,8 @@
         <nav aria-label="breadcrumb animated slideInDown">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item text-white active" aria-current="page">{% trans "Home" %}</li>
-                <li class="breadcrumb-item text-white active" aria-current="page">{% trans "Operations & Services" %}</li>
+                <li class="breadcrumb-item text-white active" aria-current="page">{% trans "Operations & Services" %}
+                </li>
                 <li class="breadcrumb-item text-white active" aria-current="page">{% trans "Operation" %}</li>
                 <li class="breadcrumb-item text-white active" aria-current="page">{% trans "Petroleum Engineering Activities" %}</li>
             </ol>
@@ -17,98 +18,103 @@
     </div>
 </div>
 
-<div class="container-xxl py-5">
+<div class="container-xxl">
     <div class="container">
         <div class="row mt-n2">
             <div class="col-12 text-center">
                 <ul class="list-inline mb-5" id="portfolio-flters">
                     <li class="mx-2"><a href="{% url '_operation' %}">{% trans "Drilling Activities" %}</a></li>
-                    <li class="mx-2 active"><a href="{% url '_operation2' %}">{% trans "Petroleum Engineering Activities" %}</a></li>
+                    <li class="mx-2 active"><a href="{% url '_operation2' %}">{% trans "Petroleum Engineering Activities"%}</a>
+                    </li>
                 </ul>
             </div>
         </div>
+    </div>
+</div>
 {% if petro %}
 {% for obj in petro %}
-<div class="container-fluid bg-light overflow-hidden my-5 px-lg-0 data second">
+<div class="container-fluid bg-light overflow-hidden my-0 px-lg-0 data second">
     <div class="container about px-lg-0">
         <div class="row g-0 mx-lg-0">
             {% get_current_language as current_language %}
             {% if forloop.counter|divisibleby:2 %}
-                {% if current_language == 'ar' %}
-                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="p-lg-5 pe-lg-0">
-                            <div class="text-start">
-                                <h1 class="display-5 mb-4">{{obj.title_ar}}</h1>
-                            </div>
-                            <p>
-                                {{obj.content_ar}}
-                            </p>
-                        </div>
+            {% if current_language == 'ar' %}
+            <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="p-lg-5 pe-lg-0">
+                    <div class="text-start">
+                        <h1 class="display-5 mb-4">{{obj.title_ar}}</h1>
                     </div>
-                    <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
-                        <div class="position-relative h-100">
-                            <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}" style="object-fit: cover;" alt="">
-                        </div>
-                    </div>
-                {% else %}
-                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="p-lg-5 pe-lg-0">
-                            <div class="text-start">
-                                <h1 class="display-5 mb-4">{{obj.title_en}}</h1>
-                            </div>
-                            <p>
-                                {{obj.content_en}}
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
-                        <div class="position-relative h-100">
-                            <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}" style="object-fit: cover;" alt="">
-                        </div>
-                    </div>
-                {% endif %}
-            {% else %}
-                {% if current_language == 'ar' %}
-                    <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
-                        <div class="position-relative h-100">
-                            <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}" style="object-fit: cover;" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="p-lg-5 pe-lg-0">
-                            <div class="text-start">
-                                <h1 class="display-5 mb-4">{{obj.title_ar}}</h1>
-                            </div>
-                            <p>
-                                {{obj.content_ar}}
-                            </p>
-                        </div>
-                    </div>
-                {% else %}
-                <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}" style="object-fit: cover;" alt="">
-                    </div>
+                    <p>
+                        {{obj.content_ar}}
+                    </p>
                 </div>
-                    <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="p-lg-5 pe-lg-0">
-                            <div class="text-start">
-                                <h1 class="display-5 mb-4">{{obj.title_en}}</h1>
-                            </div>
-                            <p>
-                                {{obj.content_en}}
-                            </p>
-                        </div>
+            </div>
+            <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}"
+                        style="object-fit: cover;" alt="">
+                </div>
+            </div>
+            {% else %}
+            <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="p-lg-5 pe-lg-0">
+                    <div class="text-start">
+                        <h1 class="display-5 mb-4">{{obj.title_en}}</h1>
                     </div>
-                {% endif %}
+                    <p>
+                        {{obj.content_en}}
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}"
+                        style="object-fit: cover;" alt="">
+                </div>
+            </div>
+            {% endif %}
+            {% else %}
+            {% if current_language == 'ar' %}
+            <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}"
+                        style="object-fit: cover;" alt="">
+                </div>
+            </div>
+            <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="p-lg-5 pe-lg-0">
+                    <div class="text-start">
+                        <h1 class="display-5 mb-4">{{obj.title_ar}}</h1>
+                    </div>
+                    <p>
+                        {{obj.content_ar}}
+                    </p>
+                </div>
+            </div>
+            {% else %}
+            <div class="col-lg-6 ps-lg-0" style="min-height: 200px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{{obj.image.url}}"
+                        style="object-fit: cover;" alt="">
+                </div>
+            </div>
+            <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="p-lg-5 pe-lg-0">
+                    <div class="text-start">
+                        <h1 class="display-5 mb-4">{{obj.title_en}}</h1>
+                    </div>
+                    <p>
+                        {{obj.content_en}}
+                    </p>
+                </div>
+            </div>
+            {% endif %}
             {% endif %}
         </div>
     </div>
 </div>
 {% endfor %}
 {% else %}
-</div>
-</div>
 <div class="container">
     <h3>{% trans "No Data Available" %}</h3>
 </div>
