--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 <!-- templates/base.html -->
 <!DOCTYPE html>
-<html {% if request.LANGUAGE_CODE == 'ar' %}lang="ar"{% else %}lang="en"{% endif %}>
+<html {% if request.LANGUAGE_CODE == 'ar' %}lang="ar" dir="rtl" else %}lang="en"{% endif %}>
 
 <head>
     <meta charset="utf-8">
