--- a/templates/index.html
+++ b/templates/index.html
@@ -9,17 +9,17 @@
 <div class="container-fluid p-0 pb-5">
     <div class="owl-carousel header-carousel position-relative">
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid-header" src="{% static 'img/cover1.jpg' %}" alt="">
+            <img class="img-fluid-header" src="{% static 'img/cover1.jpg' %}" alt="image1">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
             </div>
         </div>
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid-header" src="{% static 'img/cover2.jpg' %}" alt="">
+            <img class="img-fluid-header" src="{% static 'img/cover2.jpg' %}" alt="image2">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
             </div>
         </div>
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid-header" src="{% static 'img/cover3.jpg' %}" alt="">
+            <img class="img-fluid-header" src="{% static 'img/cover3.jpg' %}" alt="image3">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
             </div>
         </div>
@@ -38,9 +38,7 @@
             </div>
             <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                 <div class="p-lg-5 pe-lg-0">
-                    <div class="text-start">
-                        <h1 class="display-5 mb-4">{% trans "About Us" %}</h1>
-                    </div>
+                    <h1 class="display-5 mb-4">{% trans "About Us" %}</h1>
                     <p class="mb-4 pb-2">
                         {% blocktrans %}
                         El Hamra Oil Company was established in August 2005 to be one of the main 
@@ -116,9 +114,7 @@
         <div class="row g-0 mx-lg-0">
             <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
                 <div class="p-lg-5 pe-lg-0">
-                    <div class="text-start">
-                        <h1 class="display-5 mb-4">{% trans "QHSE" %}</h1>
-                    </div>
+                    <h1 class="display-5 mb-4">{% trans "QHSE" %}</h1>
                     <p class="mb-4 pb-2">
                         {% blocktrans %}
                         HSE, which stands for Health, Safety, and Environment, 
