--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -1,8 +1,9 @@
 {% load i18n %}
 <!-- Footer Start -->
 
+
     
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s" dir="ltr">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
