--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -342,7 +342,7 @@
 }
 
 .page-header-about {
-    background: linear-gradient(rgba(53, 53, 53, .7), rgba(53, 53, 53, .7)), url(../img/image.jpg) center center no-repeat;
+    background: linear-gradient(rgba(53, 53, 53, .7), rgba(53, 53, 53, .7)), url(../img/Picture1.png) center center no-repeat;
     background-size: cover;
 }
 
