--- a/templates/index.html
+++ b/templates/index.html
@@ -9,17 +9,17 @@
 <div class="container-fluid p-0 pb-5">
     <div class="owl-carousel header-carousel position-relative">
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid-header" src="{% static 'img/cover1.jpg' %}" alt="image1">
+            <img class="img-fluid-header" src="{% static 'img/Picture1.png' %}" alt="image1">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
             </div>
         </div>
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid-header" src="{% static 'img/cover2.jpg' %}" alt="image2">
+            <img class="img-fluid-header" src="{% static 'img/Picture3.jpg' %}" alt="image2">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
             </div>
         </div>
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid-header" src="{% static 'img/cover3.jpg' %}" alt="image3">
+            <img class="img-fluid-header" src="{% static 'img/cover2.jpg' %}" alt="image3">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(53, 53, 53, .7);">
             </div>
         </div>
@@ -33,7 +33,7 @@
         <div class="row g-0 mx-lg-0">
             <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/about3.jpeg' %}" style="object-fit: cover;" alt="">
+                    <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/Picture3.jpg' %}" style="object-fit: cover;" alt="">
                 </div>
             </div>
             <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
